--- a/packages/gpt-runner-web/client/public/locales/zh_Hant.json
+++ b/packages/gpt-runner-web/client/public/locales/zh_Hant.json
@@ -35,6 +35,7 @@
     "confirm_create_btn": "確認",
     "settings_general": "通用",
     "settings_language": "語言",
+    "settings_theme": "主題",
     "settings_openai_config": "OpenAI 配置",
     "settings_tab_settings": "設定",
     "settings_tab_config_info": "配置信息",
