--- a/packages/gpt-runner-web/client/public/locales/ja.json
+++ b/packages/gpt-runner-web/client/public/locales/ja.json
@@ -46,6 +46,10 @@
     "openai_access_token_placeholder": "OpenAI APIキーをお持ちでない場合は、アクセストークンを提供してください",
     "openai_get_access_token_tips": "アクセストークンはこちらで取得できます：",
     "save_btn": "保存",
-    "disabled_save_openai_config_btn": "localhost以外では保存できません"
+    "disabled_save_openai_config_btn": "localhost以外では保存できません",
+    "toast_save_success": "保存しました！",
+    "toast_save_error": "保存できませんでした！",
+    "toast_create_success": "作成しました！",
+    "toast_create_error": "作成できませんでした！"
   }
 }
