--- a/packages/gpt-runner-web/client/public/locales/zh_Hant.json
+++ b/packages/gpt-runner-web/client/public/locales/zh_Hant.json
@@ -50,6 +50,7 @@
     "toast_save_success": "保存成功！",
     "toast_save_error": "保存失敗！",
     "toast_create_success": "创建成功！",
-    "toast_create_error": "创建失败！"
+    "toast_create_error": "创建失败！",
+    "toast_copy_success": "複製成功！"
   }
 }
