feat(gpt-runner-web): add realtime gpt.md file parse

--- a/packages/gpt-runner-web/client/public/locales/de.json
+++ b/packages/gpt-runner-web/client/public/locales/de.json
@@ -26,6 +26,7 @@
     "delete_chat_btn": "Chat löschen",
     "refresh_btn": "Aktualisieren",
     "filter_btn": "Filtern",
+    "pin_up_btn": "Anheften",
     "file_tree_top_tokens_tips": "<FileNumWrapper>{{fileNum}}</FileNumWrapper> Dateien <TokenNumWrapper>{{tokenNum}}</TokenNumWrapper> Tokens.",
     "file_tree_top_clear_checked_btn": "Auswahl aufheben",
     "file_tree_top_all_file_path_as_prompt": "Alle Dateipfade als Vorschlag {{tokenNum}} Tokens",
