--- a/packages/gpt-runner-web/client/public/locales/en.json
+++ b/packages/gpt-runner-web/client/public/locales/en.json
@@ -26,6 +26,7 @@
     "delete_chat_btn": "Delete Chat",
     "refresh_btn": "Refresh",
     "filter_btn": "Filter",
+    "pin_up_btn": "Pin Up",
     "file_tree_top_tokens_tips": "<FileNumWrapper>{{fileNum}}</FileNumWrapper> Files <TokenNumWrapper>{{tokenNum}}</TokenNumWrapper> Tokens.",
     "file_tree_top_clear_checked_btn": "Clear Checked",
     "file_tree_top_all_file_path_as_prompt": "All file path as prompt {{tokenNum}} tokens",
