--- a/packages/gpt-runner-web/client/public/locales/ja.json
+++ b/packages/gpt-runner-web/client/public/locales/ja.json
@@ -1,8 +1,9 @@
 {
   "chat_page": {
     "root_path_not_found_tips": "ルートパスを指定してください！",
-    "tab_explore": "探索",
+    "tab_presets": "プリセット",
     "tab_chat": "チャット",
+    "tab_files": "ファイル",
     "tab_settings": "設定",
     "continue_inputting_prompt": "続けてください",
     "copy_btn": "コピー",
