--- a/packages/gpt-runner-web/client/public/locales/zh_CN.json
+++ b/packages/gpt-runner-web/client/public/locales/zh_CN.json
@@ -1,8 +1,9 @@
 {
   "chat_page": {
     "root_path_not_found_tips": "找不到项目根路径！",
-    "tab_explore": "浏览",
+    "tab_presets": "预设",
     "tab_chat": "聊天",
+    "tab_files": "文件",
     "tab_settings": "设置",
     "continue_inputting_prompt": "请继续",
     "copy_btn": "复制",
