feat(gpt-runner-web): add about page

--- a/packages/gpt-runner-web/client/public/locales/de.json
+++ b/packages/gpt-runner-web/client/public/locales/de.json
@@ -5,6 +5,7 @@
     "tab_chat": "Chat",
     "tab_files": "Dateien",
     "tab_settings": "Einstellungen",
+    "tab_about": "Über",
     "continue_inputting_prompt": "Bitte weitermachen",
     "copy_btn": "Kopieren",
     "insert_btn": "Einfügen",
@@ -43,6 +44,12 @@
     "settings_openai_config": "OpenAI Konfiguration",
     "settings_tab_settings": "Einstellungen",
     "settings_tab_config_info": "Konfigurationsinformationen",
+    "settings_tab_about": "Über",
+    "version": "Version",
+    "github": "Github",
+    "reward": "Belohnung",
+    "contributors": "Mitwirkende",
+    "buy_me_a_coffee": "Kauf mir einen Kaffee",
     "openai_api_key": "OpenAI API-Schlüssel",
     "openai_api_key_placeholder": "Bitte geben Sie den OpenAI API-Schlüssel ein",
     "openai_api_base_path": "OpenAI API-Basispfad",
