--- a/packages/gpt-runner-web/client/public/locales/en.json
+++ b/packages/gpt-runner-web/client/public/locales/en.json
@@ -5,6 +5,7 @@
     "tab_chat": "Chat",
     "tab_files": "Files",
     "tab_settings": "Settings",
+    "tab_about": "About",
     "continue_inputting_prompt": "Please continue",
     "copy_btn": "Copy",
     "insert_btn": "Insert",
@@ -43,6 +44,12 @@
     "settings_openai_config": "OpenAI Config",
     "settings_tab_settings": "Settings",
     "settings_tab_config_info": "Config Info",
+    "settings_tab_about": "About",
+    "version": "Version",
+    "github": "Github",
+    "reward": "Reward",
+    "contributors": "Contributors",
+    "buy_me_a_coffee": "buy me a coffee",
     "openai_api_key": "OpenAI API Key",
     "openai_api_key_placeholder": "Please input OpenAI API Key",
     "openai_api_base_path": "OpenAI API Base Path",
