--- a/packages/gpt-runner-web/client/public/locales/ja.json
+++ b/packages/gpt-runner-web/client/public/locales/ja.json
@@ -5,6 +5,7 @@
     "tab_chat": "チャット",
     "tab_files": "ファイル",
     "tab_settings": "設定",
+    "tab_about": "情報",
     "continue_inputting_prompt": "続けてください",
     "copy_btn": "コピー",
     "insert_btn": "挿入",
@@ -43,6 +44,12 @@
     "settings_openai_config": "OpenAIの設定",
     "settings_tab_settings": "設定",
     "settings_tab_config_info": "設定情報",
+    "settings_tab_about": "情報",
+    "version": "バージョン",
+    "github": "GitHub",
+    "reward": "寄付",
+    "contributors": "貢献者",
+    "buy_me_a_coffee": "コーヒーを買ってください",
     "openai_api_key": "OpenAI APIキー",
     "openai_api_key_placeholder": "OpenAI APIキーを入力してください",
     "openai_api_base_path": "OpenAI APIベースパス",
