--- a/packages/gpt-runner-web/client/public/locales/zh_CN.json
+++ b/packages/gpt-runner-web/client/public/locales/zh_CN.json
@@ -5,6 +5,7 @@
     "tab_chat": "聊天",
     "tab_files": "文件",
     "tab_settings": "设置",
+    "tab_about": "关于",
     "continue_inputting_prompt": "请继续",
     "copy_btn": "复制",
     "insert_btn": "插入",
@@ -43,6 +44,12 @@
     "settings_openai_config": "OpenAI 配置",
     "settings_tab_settings": "设置",
     "settings_tab_config_info": "配置信息",
+    "settings_tab_about": "关于",
+    "version": "版本",
+    "github": "GitHub",
+    "reward": "赞赏",
+    "contributors": "贡献者",
+    "buy_me_a_coffee": "请我喝杯咖啡",
     "openai_api_key": "OpenAI API Key",
     "openai_api_key_placeholder": "请输入 OpenAI API Key",
     "openai_api_base_path": "OpenAI API 基础路径",
