--- a/packages/gpt-runner-web/client/public/locales/zh_Hant.json
+++ b/packages/gpt-runner-web/client/public/locales/zh_Hant.json
@@ -5,6 +5,7 @@
     "tab_chat": "聊天",
     "tab_files": "文件",
     "tab_settings": "設定",
+    "tab_about": "關於",
     "continue_inputting_prompt": "請繼續",
     "copy_btn": "複製",
     "insert_btn": "插入",
@@ -43,6 +44,12 @@
     "settings_openai_config": "OpenAI 配置",
     "settings_tab_settings": "設定",
     "settings_tab_config_info": "配置信息",
+    "settings_tab_about": "關於",
+    "version": "版本",
+    "github": "GitHub",
+    "reward": "贊賞",
+    "contributors": "貢獻者",
+    "buy_me_a_coffee": "請我喝杯咖啡",
     "openai_api_key": "OpenAI API Key",
     "openai_api_key_placeholder": "請輸入 OpenAI API Key",
     "openai_api_base_path": "OpenAI API 基礎路徑",
