feat(gpt-runner-web): add proxy settings

--- a/packages/gpt-runner-web/client/public/locales/de.json
+++ b/packages/gpt-runner-web/client/public/locales/de.json
@@ -42,6 +42,7 @@
     "settings_language": "Sprache",
     "settings_theme": "Thema",
     "settings_openai_config": "OpenAI Konfiguration",
+    "settings_proxy": "Proxy",
     "settings_tab_settings": "Einstellungen",
     "settings_tab_config_info": "Konfigurationsinformationen",
     "settings_tab_about": "Über",
@@ -56,8 +57,10 @@
     "openai_access_token": "OpenAI Zugriffstoken",
     "openai_access_token_placeholder": "Wenn Sie keinen OpenAI API-Schlüssel haben, geben Sie bitte das Zugriffstoken ein",
     "openai_get_access_token_tips": "Sie können hier das Zugriffstoken erhalten: ",
+    "for_example": "zum Beispiel",
+    "proxy_url": "Proxy URL",
     "save_btn": "Speichern",
-    "disabled_save_openai_config_btn": "Sie können außerhalb von localhost nicht speichern",
+    "disabled_save_secrets_config_btn": "Sie können außerhalb von localhost nicht speichern",
     "toast_save_success": "Speichern erfolgreich!",
     "toast_save_error": "Speichern fehlgeschlagen!",
     "toast_create_success": "Erstellen erfolgreich!",
