--- a/packages/gpt-runner-web/client/public/locales/en.json
+++ b/packages/gpt-runner-web/client/public/locales/en.json
@@ -42,6 +42,7 @@
     "settings_language": "Language",
     "settings_theme": "Theme",
     "settings_openai_config": "OpenAI Config",
+    "settings_proxy": "Proxy",
     "settings_tab_settings": "Settings",
     "settings_tab_config_info": "Config Info",
     "settings_tab_about": "About",
@@ -56,8 +57,10 @@
     "openai_access_token": "OpenAI Access Token",
     "openai_access_token_placeholder": "if you don't have openai api key, please provide access token",
     "openai_get_access_token_tips": "You can open here to got the access token: ",
+    "for_example": "For example",
+    "proxy_url": "Proxy URL",
     "save_btn": "Save",
-    "disabled_save_openai_config_btn": "You can't save outside localhost",
+    "disabled_save_secrets_config_btn": "You can't save outside localhost",
     "toast_save_success": "Save success!",
     "toast_save_error": "Save error!",
     "toast_create_success": "Create success!",
