--- a/packages/gpt-runner-web/client/public/locales/ja.json
+++ b/packages/gpt-runner-web/client/public/locales/ja.json
@@ -42,6 +42,7 @@
     "settings_language": "言語",
     "settings_theme": "テーマ",
     "settings_openai_config": "OpenAIの設定",
+    "settings_proxy": "プロキシ",
     "settings_tab_settings": "設定",
     "settings_tab_config_info": "設定情報",
     "settings_tab_about": "情報",
@@ -51,13 +52,15 @@
     "contributors": "貢献者",
     "buy_me_a_coffee": "コーヒーを買ってください",
     "openai_api_key": "OpenAI APIキー",
-    "openai_api_key_placeholder": "OpenAI APIキーを入力してください",
-    "openai_api_base_path": "OpenAI APIベースパス",
+    "openai_api_key_placeholder": "OpenAI API キーを入力してください",
+    "openai_api_base_path": "OpenAI API ベースパス",
     "openai_access_token": "OpenAIアクセストークン",
-    "openai_access_token_placeholder": "OpenAI APIキーをお持ちでない場合は、アクセストークンを提供してください",
+    "openai_access_token_placeholder": "OpenAI API キーをお持ちでない場合は、アクセストークンを提供してください",
     "openai_get_access_token_tips": "アクセストークンはこちらで取得できます：",
+    "for_example": "例",
+    "proxy_url": "プロキシ URL",
     "save_btn": "保存",
-    "disabled_save_openai_config_btn": "localhost以外では保存できません",
+    "disabled_save_secrets_config_btn": "localhost以外では保存できません",
     "toast_save_success": "保存しました！",
     "toast_save_error": "保存できませんでした！",
     "toast_create_success": "作成しました！",
