--- a/packages/gpt-runner-web/client/public/locales/zh_CN.json
+++ b/packages/gpt-runner-web/client/public/locales/zh_CN.json
@@ -42,6 +42,7 @@
     "settings_language": "语言",
     "settings_theme": "主题",
     "settings_openai_config": "OpenAI 配置",
+    "settings_proxy": "代理配置",
     "settings_tab_settings": "设置",
     "settings_tab_config_info": "配置信息",
     "settings_tab_about": "关于",
@@ -56,8 +57,10 @@
     "openai_access_token": "OpenAI Access Token",
     "openai_access_token_placeholder": "如果您没有 OpenAI API Key，请提供 OpenAI Access Token",
     "openai_get_access_token_tips": "您可以在此处获取 Access Token：",
+    "for_example": "例如",
+    "proxy_url": "代理 URL",
     "save_btn": "保存",
-    "disabled_save_openai_config_btn": "无法在 localhost 以外保存",
+    "disabled_save_secrets_config_btn": "无法在 localhost 以外保存",
     "toast_save_success": "保存成功！",
     "toast_save_error": "保存失败！",
     "toast_create_success": "创建成功！",
