feat(gpt-runner-web): add model override settings support

--- a/packages/gpt-runner-web/client/public/locales/de.json
+++ b/packages/gpt-runner-web/client/public/locales/de.json
@@ -41,7 +41,7 @@
     "settings_general": "Allgemein",
     "settings_language": "Sprache",
     "settings_theme": "Thema",
-    "settings_openai_config": "OpenAI Konfiguration",
+    "settings_config": "Konfiguration",
     "settings_proxy": "Proxy",
     "settings_tab_settings": "Einstellungen",
     "settings_tab_config_info": "Konfigurationsinformationen",
