--- a/packages/gpt-runner-web/client/public/locales/ja.json
+++ b/packages/gpt-runner-web/client/public/locales/ja.json
@@ -41,7 +41,7 @@
     "settings_general": "一般",
     "settings_language": "言語",
     "settings_theme": "テーマ",
-    "settings_openai_config": "OpenAIの設定",
+    "settings_config": "の設定",
     "settings_proxy": "プロキシ",
     "settings_tab_settings": "設定",
     "settings_tab_config_info": "設定情報",
