--- a/packages/gpt-runner-web/client/public/locales/en.json
+++ b/packages/gpt-runner-web/client/public/locales/en.json
@@ -30,6 +30,8 @@
     "filter_btn": "Filter",
     "pin_up_btn": "Pin Up",
     "close_btn": "Close",
+    "close_sidebar_btn": "Close Sidebar",
+    "open_sidebar_btn": "Open Sidebar",
     "search_placeholder": "Search...",
     "file_tree_top_tokens_tips": "<FileNumWrapper>{{fileNum}}</FileNumWrapper> Files <TokenNumWrapper>{{tokenNum}}</TokenNumWrapper> Tokens.",
     "file_tree_top_clear_checked_btn": "Clear Checked",
@@ -80,6 +82,7 @@
     "toast_create_success": "Create success!",
     "toast_create_error": "Create error!",
     "toast_copy_success": "Copied!",
-    "toast_selected_files_as_prompt_reopened": "Selected Files As Prompt Has Reopened!"
+    "toast_selected_files_as_prompt_reopened": "Selected Files As Prompt Has Reopened!",
+    "monaco_switch_language_tips": "Switch To Language"
   }
 }
