--- a/packages/gpt-runner-web/client/public/locales/zh_CN.json
+++ b/packages/gpt-runner-web/client/public/locales/zh_CN.json
@@ -30,6 +30,8 @@
     "filter_btn": "筛选",
     "pin_up_btn": "钉住",
     "close_btn": "关闭",
+    "close_sidebar_btn": "关闭侧栏",
+    "open_sidebar_btn": "打开侧栏",
     "search_placeholder": "搜索...",
     "file_tree_top_tokens_tips": "<FileNumWrapper>{{fileNum}}</FileNumWrapper>个文件，共<TokenNumWrapper>{{tokenNum}}</TokenNumWrapper>个 tokens。",
     "file_tree_top_clear_checked_btn": "清除选中",
@@ -80,6 +82,7 @@
     "toast_create_success": "创建成功！",
     "toast_create_error": "创建失败！",
     "toast_copy_success": "复制成功！",
-    "toast_selected_files_as_prompt_reopened": "已重新打开选定的文件作为提示！"
+    "toast_selected_files_as_prompt_reopened": "已重新打开选定的文件作为提示！",
+    "monaco_switch_language_tips": "切换语言"
   }
 }
