--- a/packages/gpt-runner-web/client/public/locales/ja.json
+++ b/packages/gpt-runner-web/client/public/locales/ja.json
@@ -6,6 +6,7 @@
     "tab_files": "ファイル",
     "tab_settings": "設定",
     "tab_about": "情報",
+    "tab_file_editor": "ファイルエディタ",
     "continue_inputting_prompt": "続けてください",
     "copy_btn": "コピー",
     "insert_btn": "挿入",
@@ -30,6 +31,8 @@
     "filter_btn": "フィルター",
     "pin_up_btn": "ピンアップ",
     "close_btn": "閉じる",
+    "cancel_btn": "キャンセル",
+    "ok_btn": "確認",
     "close_sidebar_btn": "サイドバーを閉じる",
     "open_sidebar_btn": "サイドバーを開く",
     "search_placeholder": "検索...",
@@ -83,6 +86,8 @@
     "toast_create_error": "作成できませんでした！",
     "toast_copy_success": "コピーしました！",
     "toast_selected_files_as_prompt_reopened": "選択したファイルをプロンプトとして再度開きました！",
-    "monaco_switch_language_tips": "言語の切り替え"
+    "monaco_switch_language_tips": "言語の切り替え",
+    "file_editor_forgot_save_tips_title": "変更を{{fileName}}に保存しますか？",
+    "file_editor_forgot_save_tips_content": "保存しない場合、変更は失われます。"
   }
 }
