feat(gpt-runner-core): add Anthropic model support

--- a/packages/gpt-runner-web/client/public/locales/de.json
+++ b/packages/gpt-runner-web/client/public/locales/de.json
@@ -59,17 +59,21 @@
     "context_settings_selected_files_checkbox_label": "Ausgewählte Dateien als Aufforderung. Aktuell ausgewählte<FileNumWrapper>{{fileNum}}</FileNumWrapper>Dateien<TokenNumWrapper>{{tokenNum}}</TokenNumWrapper>Token.",
     "context_settings_all_file_paths_checkbox_label": "Alle Dateipfade als Aufforderung<TokenNumWrapper>{{tokenNum}}</TokenNumWrapper>Token.",
     "model_settings_btn": "Modell-Einstellungen",
-    "openai_model_name": "Modellname",
-    "openai_temperature": "Temperatur",
-    "openai_max_tokens": "Maximale Antwort-Token",
-    "openai_top_p": "Top P",
-    "openai_frequency_penalty": "Frequenzstrafe",
-    "openai_presence_penalty": "Anwesenheitsstrafe",
+    "model_name": "Modellname",
+    "temperature": "Temperatur",
+    "max_tokens": "Maximale Antwort-Token",
+    "top_p": "Top P",
+    "top_k": "Top K",
+    "frequency_penalty": "Frequenzstrafe",
+    "presence_penalty": "Anwesenheitsstrafe",
     "version": "Version",
     "github": "Github",
     "reward": "Belohnung",
     "contributors": "Mitwirkende",
     "buy_me_a_coffee": "Kauf mir einen Kaffee",
+    "anthropic_api_key": "Anthropic API-Schlüssel",
+    "anthropic_api_key_placeholder": "Bitte geben Sie den Anthropic API-Schlüssel ein",
+    "anthropic_api_base_path": "Anthropic API-Basispfad",
     "openai_api_key": "OpenAI API-Schlüssel",
     "openai_api_key_placeholder": "Bitte geben Sie den OpenAI API-Schlüssel ein",
     "openai_api_base_path": "OpenAI API-Basispfad",
