--- a/packages/gpt-runner-web/client/public/locales/en.json
+++ b/packages/gpt-runner-web/client/public/locales/en.json
@@ -59,17 +59,21 @@
     "context_settings_selected_files_checkbox_label": "Selected Files As Prompt. Current Selected <FileNumWrapper>{{fileNum}}</FileNumWrapper> Files <TokenNumWrapper>{{tokenNum}}</TokenNumWrapper> Tokens.",
     "context_settings_all_file_paths_checkbox_label": "All File Path As Prompt <TokenNumWrapper>{{tokenNum}}</TokenNumWrapper> Tokens.",
     "model_settings_btn": "Model Settings",
-    "openai_model_name": "Model Name",
-    "openai_temperature": "Temperature",
-    "openai_max_tokens": "Max Reply Tokens",
-    "openai_top_p": "Top P",
-    "openai_frequency_penalty": "Frequency Penalty",
-    "openai_presence_penalty": "Presence Penalty",
+    "model_name": "Model Name",
+    "temperature": "Temperature",
+    "max_tokens": "Max Reply Tokens",
+    "top_p": "Top P",
+    "top_k": "Top K",
+    "frequency_penalty": "Frequency Penalty",
+    "presence_penalty": "Presence Penalty",
     "version": "Version",
     "github": "Github",
     "reward": "Reward",
     "contributors": "Contributors",
     "buy_me_a_coffee": "buy me a coffee",
+    "anthropic_api_key": "Anthropic API Key",
+    "anthropic_api_key_placeholder": "Please input Anthropic API Key",
+    "anthropic_api_base_path": "Anthropic API Base Path",
     "openai_api_key": "OpenAI API Key",
     "openai_api_key_placeholder": "Please input OpenAI API Key",
     "openai_api_base_path": "OpenAI API Base Path",
