--- a/packages/gpt-runner-web/client/public/locales/ja.json
+++ b/packages/gpt-runner-web/client/public/locales/ja.json
@@ -59,17 +59,21 @@
     "context_settings_selected_files_checkbox_label": "選択したファイルをプロンプトとして使用。現在選択中<FileNumWrapper>{{fileNum}}</FileNumWrapper>ファイル<TokenNumWrapper>{{tokenNum}}</TokenNumWrapper>トークン。",
     "context_settings_all_file_paths_checkbox_label": "すべてのファイルパスをプロンプトとして使用<TokenNumWrapper>{{tokenNum}}</TokenNumWrapper>トークン。",
     "model_settings_btn": "モデル設定",
-    "openai_model_name": "モデル名",
-    "openai_temperature": "温度",
-    "openai_max_tokens": "最大回答トークン数",
-    "openai_top_p": "トップP",
-    "openai_frequency_penalty": "頻度ペナルティ",
-    "openai_presence_penalty": "存在ペナルティ",
+    "model_name": "モデル名",
+    "temperature": "温度",
+    "max_tokens": "最大回答トークン数",
+    "top_p": "Top P",
+    "top_k": "Top K",
+    "frequency_penalty": "頻度ペナルティ",
+    "presence_penalty": "存在ペナルティ",
     "version": "バージョン",
     "github": "GitHub",
     "reward": "寄付",
     "contributors": "貢献者",
     "buy_me_a_coffee": "コーヒーを買ってください",
+    "anthropic_api_key": "Anthropic APIキー",
+    "anthropic_api_key_placeholder": "Anthropic API キーを入力してください",
+    "anthropic_api_base_path": "Anthropic API ベースパス",
     "openai_api_key": "OpenAI APIキー",
     "openai_api_key_placeholder": "OpenAI API キーを入力してください",
     "openai_api_base_path": "OpenAI API ベースパス",
