--- a/packages/gpt-runner-web/client/public/locales/zh_CN.json
+++ b/packages/gpt-runner-web/client/public/locales/zh_CN.json
@@ -59,17 +59,21 @@
     "context_settings_selected_files_checkbox_label": "将选定的文件作为提示，当前选定 <FileNumWrapper>{{fileNum}}</FileNumWrapper> 个文件，<TokenNumWrapper>{{tokenNum}}</TokenNumWrapper> tokens",
     "context_settings_all_file_paths_checkbox_label": "将所有文件路径作为提示，<TokenNumWrapper>{{tokenNum}}</TokenNumWrapper> tokens",
     "model_settings_btn": "模型设置",
-    "openai_model_name": "模型名称",
-    "openai_temperature": "温度",
-    "openai_max_tokens": "最大回复令牌",
-    "openai_top_p": "Top P",
-    "openai_frequency_penalty": "频率惩罚",
-    "openai_presence_penalty": "存在惩罚",
+    "model_name": "模型名称",
+    "temperature": "温度",
+    "max_tokens": "最大回复令牌",
+    "top_p": "Top P",
+    "top_k": "Top K",
+    "frequency_penalty": "频率惩罚",
+    "presence_penalty": "存在惩罚",
     "version": "版本",
     "github": "GitHub",
     "reward": "赞赏",
     "contributors": "贡献者",
     "buy_me_a_coffee": "请我喝杯咖啡",
+    "anthropic_api_key": "Anthropic API Key",
+    "anthropic_api_key_placeholder": "请输入 Anthropic API Key",
+    "anthropic_api_base_path": "Anthropic API 基础路径",
     "openai_api_key": "OpenAI API Key",
     "openai_api_key_placeholder": "请输入 OpenAI API Key",
     "openai_api_base_path": "OpenAI API 基础路径",
