--- a/packages/gpt-runner-web/client/public/locales/zh_Hant.json
+++ b/packages/gpt-runner-web/client/public/locales/zh_Hant.json
@@ -59,17 +59,21 @@
     "context_settings_selected_files_checkbox_label": "將選定的文件作為提示，當前選定 <FileNumWrapper>{{fileNum}}</FileNumWrapper> 個文件， <TokenNumWrapper>{{tokenNum}}</TokenNumWrapper> tokens",
     "context_settings_all_file_paths_checkbox_label": "將所有文件路徑作為提示，<TokenNumWrapper>{{tokenNum}}</TokenNumWrapper> tokens",
     "model_settings_btn": "模型設置",
-    "openai_model_name": "模型名稱",
-    "openai_temperature": "溫度",
-    "openai_max_tokens": "最大回覆令牌",
-    "openai_top_p": "前P",
-    "openai_frequency_penalty": "頻率處罰",
-    "openai_presence_penalty": "存在處罰",
+    "model_name": "模型名稱",
+    "temperature": "溫度",
+    "max_tokens": "最大回覆令牌",
+    "top_p": "Top P",
+    "top_k": "Top K",
+    "frequency_penalty": "頻率處罰",
+    "presence_penalty": "存在處罰",
     "version": "版本",
     "github": "GitHub",
     "reward": "贊賞",
     "contributors": "貢獻者",
     "buy_me_a_coffee": "請我喝杯咖啡",
+    "anthropic_api_key": "Anthropic API Key",
+    "anthropic_api_key_placeholder": "請輸入 Anthropic API Key",
+    "anthropic_api_base_path": "Anthropic API 基礎路徑",
     "openai_api_key": "OpenAI API Key",
     "openai_api_key_placeholder": "請輸入 OpenAI API Key",
     "openai_api_base_path": "OpenAI API 基礎路徑",
